--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -52,17 +52,18 @@
                 <Button Width="20" Height="20" Grid.Column="1" Grid.Row="2" Click="Change_Tool" Content="G"/>
                 <Button Width="20" Height="20" Grid.Column="1" Grid.Row="3" Click="Change_Tool" Content="H"/>
             </Grid>
-            
-            <Rectangle Fill="Gray" Grid.Column="1" />
-            <Image x:Name="Screen_Background"  Grid.Column="1"  RenderOptions.BitmapScalingMode="NearestNeighbor" />
-            <Image x:Name="Screen"  Grid.Column="1" MouseMove="Draw" MouseLeftButtonDown="StartDraw" MouseLeftButtonUp="StopDraw"  
-                   MouseRightButtonDown="StartRemove" MouseRightButtonUp="StopRemove" RenderOptions.BitmapScalingMode="NearestNeighbor"  />
-            
-            
-            
-            
-            
-            <Grid Grid.Column="2">
+
+            <Grid Grid.Column="1" Name="LayerGrid" MouseMove="Draw" MouseLeftButtonDown="StartDraw" MouseLeftButtonUp="StopDraw"  
+                   MouseRightButtonDown="StartRemove" MouseRightButtonUp="StopRemove">
+                <Rectangle Fill="Gray" Grid.Column="1" />
+                <Image x:Name="Screen_Background"  RenderOptions.BitmapScalingMode="NearestNeighbor" />
+                <Image x:Name="Screen"   RenderOptions.BitmapScalingMode="NearestNeighbor"  />
+            </Grid>
+
+
+
+
+        <Grid Grid.Column="2">
                 <Grid.RowDefinitions >
                     <RowDefinition Height="auto"/>
                     <RowDefinition Height="auto"/>
@@ -110,7 +111,7 @@
                     </Grid.RowDefinitions>
 
                     <Label Content="Warstwy     " Grid.Row="0"/>
-                <ListBox Name="Layers" Grid.Row="1"></ListBox>
+                <ListBox Name="Layers" Grid.Row="1" SelectionChanged="ChangeLayer"></ListBox>
 
 
                     <Grid Grid.Row="2">
