--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -5,9 +5,23 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:PixelArtProgram"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800"
-        KeyDown="ShortCuts"
+        Title="Pixel Art Program" Height="550" Width="965"
+        
         >
+    <Window.CommandBindings>
+        <CommandBinding Command="local:CustomCommands.ExtractLayer"  Executed="ExtractLayer" CanExecute="CanExtractExecute"/>
+        <CommandBinding Command="local:CustomCommands.ExtractAll"  Executed="ExtractAll" CanExecute="CanExtractExecute"/>
+    </Window.CommandBindings>   
+    <Window.InputBindings>
+        <KeyBinding Command="New" Key="N" Modifiers="Ctrl"/>
+        <KeyBinding Command="Save" Key="S" Modifiers="Ctrl"/>
+        <KeyBinding Command="Open" Key="O" Modifiers="Ctrl"/>
+        <KeyBinding Command="Undo" Key="Z" Modifiers="Ctrl"/>
+        <KeyBinding Command="Redo" Key="Y" Modifiers="Ctrl"/>
+        <KeyBinding Command="Copy" Key="C" Modifiers="Ctrl"/>
+        <KeyBinding Command="Paste" Key="V" Modifiers="Ctrl"/>
+        
+    </Window.InputBindings>
     <Grid ShowGridLines="True">
         <Grid.RowDefinitions>
             <RowDefinition Height="1*"/>
@@ -16,19 +30,19 @@
         <Grid Grid.Row="0" Panel.ZIndex="9999">
             <Menu>
                 <MenuItem Header="Plik">
-                    <MenuItem Header="Zapisz" Click="SaveImage" InputGestureText="Ctrl + S"/>
-                    <MenuItem Header="Nowy" Click="CreateNew" InputGestureText="Ctrl + N"/>
-                    <MenuItem Header="Otwórz" Click="OpenImage" InputGestureText="Ctrl + O"/>
+                    <MenuItem Header="Zapisz" Command="Save" InputGestureText="Ctrl + S"/>
+                    <MenuItem Header="Nowy" Command="New" InputGestureText="Ctrl + N"/>
+                    <MenuItem Header="Otwórz" Command="Open" InputGestureText="Ctrl + O"/>
                     <Separator/>
-                    <MenuItem Header="Wyekstraktuj Warstwę" Click="ExtractLayer" InputGestureText="Ctrl + E"/>
-                    <MenuItem Header="Wyekstraktuj Wszystko" Click="ExtractAll" InputGestureText="Ctrl + R"/>
+                    <MenuItem Header="Wyekstraktuj Warstwę" Command="local:CustomCommands.ExtractLayer" InputGestureText="Ctrl + E"/>
+                    <MenuItem Header="Wyekstraktuj Wszystko" Command="local:CustomCommands.ExtractAll" InputGestureText="Ctrl + R"/>
                 </MenuItem>
                 <MenuItem Header="Edytuj">
-                    <MenuItem Header="Cofnij" Click="Undo" InputGestureText="Ctrl + Z"/>
-                    <MenuItem Header="Ponów" Click="Redo" InputGestureText="Ctrl + Y"/>
+                    <MenuItem Header="Cofnij" Command="Undo" InputGestureText="Ctrl + Z"/>
+                    <MenuItem Header="Ponów" Command="Redo" InputGestureText="Ctrl + Y"/>
                     <Separator/>
-                    <MenuItem Header="Kopiuj" Click="Copy" InputGestureText="Ctrl + C"/>
-                    <MenuItem Header="Wklej" Click="Paste" InputGestureText="Ctrl + V"/>
+                    <MenuItem Header="Kopiuj" Command="Copy" InputGestureText="Ctrl + C"/>
+                    <MenuItem Header="Wklej" Command="Paste" InputGestureText="Ctrl + V"/>
                     <Separator/>
                     <MenuItem Header="Kolor Do Warstwy" Click="ExtractColor"/>
                     
@@ -46,7 +60,7 @@
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="auto"/>
                 <ColumnDefinition Width="*"/>
-                <ColumnDefinition Width="auto"/>
+                <ColumnDefinition Width="165"/>
             </Grid.ColumnDefinitions>
 
             <Grid>
@@ -156,19 +170,37 @@
 
                     <Grid Grid.Row="2">
                         <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="auto"/>
-                            <ColumnDefinition Width="auto"/>
-                            <ColumnDefinition Width="auto"/>
-                            <ColumnDefinition Width="auto"/>
-                            <ColumnDefinition Width="auto"/>
-                            <ColumnDefinition Width="auto"/>
-                        </Grid.ColumnDefinitions>    
-                        <Button Content="+" Grid.Column="0" Click="AddLayer" MinWidth="15"/>
-                        <Button Content="-" Grid.Column="1" Click="RemoveLayer" MinWidth="15"/>
-                        <Button Content="/\" Grid.Column="2" Click="UpLayer" MinWidth="15"/>
-                        <Button Content="\/" Grid.Column="3" Click="DownLayer" MinWidth="15"/>
-                        <Button Content="C" Grid.Column="4" Click="MergeLayer" MinWidth="15"/>
-                        <Button Content="O" Grid.Column="5" Click="VisibleLayer" MinWidth="15"/>
+                            <ColumnDefinition Width="*"/>
+                            <ColumnDefinition Width="*"/>
+                            <ColumnDefinition Width="*"/>
+                            <ColumnDefinition Width="*"/>
+                            <ColumnDefinition Width="*"/>
+                            <ColumnDefinition Width="*"/>
+                        </Grid.ColumnDefinitions>
+                        <Button Grid.Column="0" Click="AddLayer" MinWidth="15">
+                            <Image Source="Grafic/add_layer.png" RenderOptions.BitmapScalingMode="NearestNeighbor"/>
+                            <Button.ToolTip>Dodaj nową warstwę</Button.ToolTip>
+                        </Button>
+                        <Button  Grid.Column="1" Click="RemoveLayer" MinWidth="15">
+                            <Image Source="Grafic/remove_layer.png" RenderOptions.BitmapScalingMode="NearestNeighbor"/>
+                            <Button.ToolTip>Usuń wybraną warstwę</Button.ToolTip>
+                        </Button>
+                        <Button  Grid.Column="2" Click="UpLayer" MinWidth="15">
+                            <Image Source="Grafic/up_layer.png" RenderOptions.BitmapScalingMode="NearestNeighbor"/>
+                            <Button.ToolTip>Przenieś warstwę niżej</Button.ToolTip>
+                        </Button>
+                        <Button Grid.Column="3" Click="DownLayer" MinWidth="15">
+                            <Image Source="Grafic/down_layer.png" RenderOptions.BitmapScalingMode="NearestNeighbor"/>
+                            <Button.ToolTip>Przenieś warstwę wyżej </Button.ToolTip>
+                        </Button>
+                        <Button  Grid.Column="4" Click="MergeLayer" MinWidth="15">
+                            <Image Source="Grafic/merge_layer.png" RenderOptions.BitmapScalingMode="NearestNeighbor"/>
+                            <Button.ToolTip>Złącz aktualną warstwę z warstwą powyżej</Button.ToolTip>
+                        </Button>
+                        <Button  Grid.Column="5" Click="VisibleLayer" MinWidth="15">
+                            <Image Source="Grafic/oko.png" RenderOptions.BitmapScalingMode="NearestNeighbor"/>
+                            <Button.ToolTip>Zmień widoczność warstwy</Button.ToolTip>
+                        </Button>
                     </Grid>
                 </Grid>
             </Grid>
